Search API 1.x, dev (xxxx-xx-xx):
---------------------------------

Search API 1.1 (2017-05-10):
----------------------------
- #2858303 by beluoctavian, drunken monkey: Fixed "is empty" Views filters for
  taxonomy term references.
- #2873246 by drunken monkey: Fixed a second error for cached aborted search
  queries in Views.
- #2862289 by hoebekewim, drunken monkey: Fixed oversized column for fulltext
  fields in denormalized index table.
- #2859683 by drunken monkey: Added a note to fields processors explaining that
  per-field keywords processing isn't supported.
- #2871497 by drunken monkey: Fixed validation of "Whitespace characters"
  setting for the Tokenizer processor.
- #2868704 by drunken monkey: Fixed old removed fields being present on query
  object.
- #2863955 by alan-ps, drunken monkey, borisson_: Fixed unsupported processors
  remaining enabled.
- #2870988 by sahilsharma011, c.nish2k3, kala4ek: Removed translations from all
  tests.
- #2871030 by drunken monkey: Fixed error for cached aborted search queries in
  Views.
- #2230935 by shkiper, drunken monkey: Added the "search-api-server-clear"
  Drush command.

Search API 1.0 (2017-04-26):
----------------------------
- #2871145 by opdavies, drunken monkey, borisson_: Fixed link to php.net for
  PCRE reference.
- #2543472 by drunken monkey: Fixed indexing of multiple indexes via Drush.
- #2871549 by drunken monkey: Added note about backwards compatibility to
  README.txt.

Search API 1.0, RC 4 (2017-04-21):
----------------------------------
- #2869121 by drunken monkey: Fixed fatal error when required fulltext filter is
  in exposed form block.

Search API 1.0, RC 3 (2017-04-20):
----------------------------------
- #2869121 by drunken monkey, Wim Leers, wouter.adem, borisson_: Added improved
  "Required" handling for the Views "Fulltext search" filter.
- #2870782 by drunken monkey: Fixed the tests for Drupal 8.2.
- #2868851 by acbramley, drunken monkey: Fixed wrong interface used for loggers.